@@ -1,5 +1,6 @@
 ﻿xx.xx.2012 - V2.1.5
 -------------------
+* Fehlgeschlagene Scans werden jetzt erfasst und die Planeten als unscannbar eingetragen
 * Erweitertes Kontextmenü bei Planeten- und Systemlinks
   - System in OD öffnen
   - Orbit in OD öffnen
